# unitn-monitoring-workshop-2023

./: LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  mypy.ini  pyproject.toml
backend/.run/: main.run.xml
backend/app/: config.py  dependencies.py  main.py
backend/app/core/: api.py  app.py  delay.py  todo.py
backend/app/core/database/: __init__.py  postgresql.py
backend/app/core/database/repository/: __init__.py  base.py  instrumented.py  postgresql.py
bot/: Dockerfile  bot.py  mypy.ini  pyproject.toml
frontend/: Dockerfile  package.json
frontend/public/: index.html
frontend/src/: App.tsx  Footer.tsx  TodoApp.tsx  TodoFooter.tsx  TodoInput.tsx  TodoItem.tsx  TodoList.tsx  TodoToggle.tsx  apis.ts  todo.tsx
grafana/: grafana.ini
grafana/dashboards/: database.json
grafana/provisioning/dashboards/: prometheus.yml
grafana/provisioning/datasources/: prometheus.yml
prometheus/: prometheus.yml
